Update CS19-2 Report Final.tex

--- a/CS19-2 Report Final.tex
+++ b/CS19-2 Report Final.tex
@@ -314,7 +314,7 @@ A member of the health unit management committee should be present during the ha
 The DHOs should coordinate the redistribution:
 \begin{itemize}
 \item Make an extra effort to redistribute excess supplies received by some facilities following kit supply. Although the kit is revised regularly, excess stock will occur and often it will be the same items that are overstocked.  
-\item • Check with other districts that might make use of the short-dated or excess stock. 
+\item Check with other districts that might make use of the short-dated or excess stock. 
 \end{itemize}
 
 The solutions and efforts that are being taken to reduce the expiry rate are still insufficient as seen below; 
@@ -353,10 +353,8 @@ However , the  compliance  on  par  level  was  only  81.9 percent  and  in  ter
 
 \subsection{Evaluation}
 
-\newpage
-
 %future-work
- \chapter{Future Work}
+ \section{Future Work}
 
 \newpage
 %conclusions and recommendations
